Feat: primeira seção (about) finalizada e responsiva

--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
             <a href="#">Testimonials</a>
             <a href="#">About us</a>
         </nav>
-        
     </header>
+    <section class="about-container">
+        <!-- <div class="img-balls-about">
+            <img src="./src/assets/images/blue-little-balls .svg" alt="15 bolinhas azul claro na disposição 3x5">
+        </div> -->
+            <img id="img-balls-about" src="./src/assets/images/blue-little-balls .svg" alt="15 bolinhas azul claro na disposição 3x5">
+        <div class="about-content">
+            <h2>Virtual healthcare for you</h2>
+            <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
+            <button type="button">Consult today</button>
+        </div>
+        <img src="./src/assets/images/about-image.svg" alt="Desenho com dois homens (um de cabelo castanho, blusa de manga longa azul, calça azul escuro e sapato azul; e outro de cabelo preto, blusa de manga longa azul com um colete rosa longo, calça azul e sapato rosa) e com alguns icones atras como ficha do paciente">
+    </section>
 </body>
 </html>
