Feat: seção 2 (services) não finalizada

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
     </header>
     <section class="about-container">
-        <img id="img-balls-about" src="./src/assets/images/blue-little-balls .svg" alt="15 bolinhas azul claro na disposição 3x5">
+        <img id="img-balls-about" src="./src/assets/images/blue-little-balls.svg" alt="15 bolinhas azul claro na disposição 3x5">
         <div class="about-content">
             <h2>Virtual healthcare for you</h2>
             <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
@@ -31,5 +31,46 @@
         </div>
         <img src="./src/assets/images/about-image.svg" alt="Desenho com dois homens (um de cabelo castanho, blusa de manga longa azul, calça azul escuro e sapato azul; e outro de cabelo preto, blusa de manga longa azul com um colete rosa longo, calça azul e sapato rosa) e com alguns icones atras como ficha do paciente">
     </section>
+
+    <section class="services-conatiner">
+        <h2>Our services</h2>
+        <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+        <div class="services-content">
+            <div class="service-card">
+                <img src="./src/assets/images/magnifying-glass.svg" alt="Icone de lupa com um icone de user dentro">
+                <h3>Search doctor</h3>
+                <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
+            </div>
+            <div class="service-card">
+                <img src="./src/assets/images/remedy.svg" alt="Icone de remdio">
+                <h3>Online pharmacy</h3>
+                <p>Buy  your medicines with our mobile application with a simple delivery system</p>
+            </div>
+            <div class="service-card">
+                <img src="./src/assets/images/form.svg" alt="Icone de formulário de pacientes">
+                <h3>Consultation</h3>
+                <p>Free consultation with our trusted doctors and get the best recomendations</p>
+            </div>
+            <div class="service-card">
+                <img src="./src/assets/images/form-details.svg" alt="Icone de formulário de paciente com informações">
+                <h3>Details info</h3>
+                <p>Free consultation with our trusted doctors and get the best recomendations</p>
+            </div>
+            <div class="service-card">
+                <img src="./src/assets/images/first-aid-kit.svg" alt="Icone de kit de primeirso socorros">
+                <h3>Emergency care</h3>
+                <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
+            </div>
+            <div class="service-card">
+                <img src="./src/assets/images/form-tracking.svg" alt="Icone de formulário de monitoramento">
+                <h3>Tracking</h3>
+                <p>Track and save your medical history and health data </p>
+            </div>
+            <img src="./src/assets/images/blue-element.svg" alt="Elemento azul em um formato abstrato, mas que lembra uma gota">
+            <img src="./src/assets/images/blue-little-balls-biggest.svg" alt="25 bolinhas azul claro na disposição 5x5">
+            <button type="button">Learn more</button>
+        </div>
+    </section>
+
 </body>
 </html>
