Fix: correção do nome da seção

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="./src/assets/images/about-image.svg" alt="Desenho com dois homens (um de cabelo castanho, blusa de manga longa azul, calça azul escuro e sapato azul; e outro de cabelo preto, blusa de manga longa azul com um colete rosa longo, calça azul e sapato rosa) e com alguns icones atras como ficha do paciente">
     </section>
 
-    <section class="services-conatiner">
+    <section class="services-container">
         <h2>Our services</h2>
         <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
         <div class="services-content">
