Feat: segunda seção (services) finalizada e responsiva

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <section class="services-container">
         <h2>Our services</h2>
+        <div class="line"></div>
         <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
         <div class="services-content">
             <div class="service-card">
@@ -66,10 +67,12 @@
                 <h3>Tracking</h3>
                 <p>Track and save your medical history and health data </p>
             </div>
-            <img src="./src/assets/images/blue-element.svg" alt="Elemento azul em um formato abstrato, mas que lembra uma gota">
-            <img src="./src/assets/images/blue-little-balls-biggest.svg" alt="25 bolinhas azul claro na disposição 5x5">
-            <button type="button">Learn more</button>
+    
         </div>
+        <img id="background-service" src="./src/assets/images/blue-element.svg" alt="Elemento azul em um formato abstrato, mas que lembra uma gota">
+        <img id="little-balls-biggest" src="./src/assets/images/blue-little-balls-biggest.svg" alt="25 bolinhas azul claro na disposição 5x5">
+        
+        <button type="button">Learn more</button>
     </section>
 
 </body>
