Feat: terceira seção (leading) finalizada e responsiva

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#">About us</a>
         </nav>
     </header>
+
     <section class="about-container">
         <img id="img-balls-about" src="./src/assets/images/blue-little-balls.svg" alt="15 bolinhas azul claro na disposição 3x5">
         <div class="about-content">
@@ -73,6 +74,17 @@
         <img id="little-balls-biggest" src="./src/assets/images/blue-little-balls-biggest.svg" alt="25 bolinhas azul claro na disposição 5x5">
         
         <button type="button">Learn more</button>
+    </section>
+
+    <section class="leading-container">
+        <img src="src/assets/images/leading-image.svg" alt="Imagem com desenho de duas pessoas (um homem de de cabelo preto, camisa de manga longa, colete longo, calça e tenis, todos azuis; e de uma mulher com cabelo preto, longo e em um rabo de cavalo, blusa de manga longa e calça azul e um colete logon e tenis rosa) e varios utensilios médicos atras como ficha de paciente e remédio">
+            <div class="leading-content">
+                <h2>Leading healthcare providers</h2>
+                <div class="line"></div>
+                <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone. To us, it’s not just work. We take pride in the solutions we deliver</p>
+                <button type="button">Learn more</button>
+            </div>
+        </img>
     </section>
 
 </body>
