Feat: quarta seção (download) finalizada e responsiva

--- a/index.html
+++ b/index.html
@@ -87,5 +87,17 @@
         </img>
     </section>
 
+    <section class="download-container">
+        <div class="dowload-content">
+            <h2>Download our mobile apps</h2>
+            <div class="line"></div>
+            <p>Our dedicated patient engagement app and 
+                web portal allow you to access information instantaneously (no tedeous form, long calls, 
+                or administrative hassle) and securely</p>
+            <button type="button">Download<img src="./src/assets/images/download-icon.svg" alt="Icone de uma seta azul apontando para baixo"></button>
+        </div>
+        <img src="/src/assets/images/download-image.svg" alt="Imagem com desenho de uma mulher (com cabelo longo preso em um rabo de cavalo, blusa de manga longa rosa, com calça e tenis azuis) mexendo no celular, varios icones de utensilios medicos atras e um homem (com cabelo preto blusa braca, jaqueta e calça azuis) dentro da tela de um celulra">
+    </section>
+
 </body>
 </html>
