--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             </div>
     
         </div>
-        <img id="background-service" src="./src/assets/images/blue-element.svg" alt="Elemento azul em um formato abstrato, mas que lembra uma gota">
-        <img id="little-balls-biggest" src="./src/assets/images/blue-little-balls-biggest.svg" alt="25 bolinhas azul claro na disposição 5x5">
+        <!-- <img id="background-service" src="./src/assets/images/blue-element.svg" alt="Elemento azul em um formato abstrato, mas que lembra uma gota">
+        <img id="little-balls-biggest" src="./src/assets/images/blue-little-balls-biggest.svg" alt="25 bolinhas azul claro na disposição 5x5"> -->
         
         <button type="button">Learn more</button>
     </section>
