Feat: quinta seção (comments) não responsiva

--- a/index.html
+++ b/index.html
@@ -99,5 +99,25 @@
         <img src="/src/assets/images/download-image.svg" alt="Imagem com desenho de uma mulher (com cabelo longo preso em um rabo de cavalo, blusa de manga longa rosa, com calça e tenis azuis) mexendo no celular, varios icones de utensilios medicos atras e um homem (com cabelo preto blusa braca, jaqueta e calça azuis) dentro da tela de um celulra">
     </section>
 
+    <section class="comments-container">
+        <div class="comments-content">
+            <img id="comment-balls-blue" src="src/assets/images/blue-little-balls-smaller.svg" alt="10 bolinhas azul claro na disposição 2x5">
+            <h2>What our customer are saying</h2>
+            <div class="line-white"></div>
+            <div class="card-comment">
+                <div class="comment-about">
+                    <img src="./src/assets/images/person-image.svg" alt="Imagem de um homem negro de barba com uma touca vermelha e uma blusa de gola alta preta">
+                    <div class="comment-details">
+                        <h3>Edward Newgate</h3>
+                        <p>Founder Circle</p>
+                    </div>
+                </div>
+                <div class="comment">“Our dedicated patient engagement app and web portal allow you to access information instantaneously (no tedeous form, long calls, or administrative hassle) and securely”</div>
+                <img id="comment-balls-white" id="comment-balls-white" src="src/assets/images/white-little-balls.svg" alt="15 bolinhas azul claro na disposição 3x5">
+            </div>
+        </div>
+        <img id="buttons-card" src="./src/assets/images/button-card.svg" alt="Botões do card">
+    </section>
+
 </body>
 </html>
