Feat: sexta seção (article) sem as imagens do fundo

--- a/index.html
+++ b/index.html
@@ -119,5 +119,42 @@
         <img id="buttons-card" src="./src/assets/images/button-card.svg" alt="Botões do card">
     </section>
 
+    <section class="article-container">
+        <h2>Check out our latest article</h2>
+        <div class="line"></div>
+        <div class="article-content">
+            <div class="article-card">
+                <img src="./src/assets/images/article-image-1.svg" alt="Imagem de uma pessoa tirando sangue">
+
+                <div class="article-text"> 
+                    <h3>Disease detection, check up in the laboratory</h3>
+                    <p>In this case, the role of the health laboratory is very important to do a disease detection...</p>
+                    <button>Read more <img src="./src/assets/images/arrow-article.svg" alt="Imagem de uma seta azul apontando para a direita"></button>
+                </div>
+            </div>
+            <div class="article-card">
+                <img src="./src/assets/images/article-image-2.svg" alt="Imagem de uma pessoa olhando algo no microscópio">
+                <div class="article-text">
+                    <h3>Herbal medicines that are safe for consumption</h3>
+                    <p>Herbal medicine is very widely used at this time because of its very good for your health...</p>
+                    <button>Read more <img src="./src/assets/images/arrow-article.svg" alt="Imagem de uma seta azul apontando para a direita"></button>
+                </div>
+                
+            </div>
+            <div class="article-card">
+                <img src="./src/assets/images/article-image-3.svg" alt="Imagem de uma pessoa fazendo skincare com uma mascara verde no rosto e velas e pedras do lado esquerdo dela">
+                <div class="article-text">
+                    <h3>Natural care for healthy facial skin</h3>
+                    <p>A healthy lifestyle should start from now and also for your skin health.</p>
+                    <p>There are some...</p>
+                    <button>Read more <img src="./src/assets/images/arrow-article.svg" alt="Imagem de uma seta azul apontando para a direita"></button>
+                </div>
+            </div>
+        </div>
+        <!-- <img id="balls-article" src="./src/assets/images/blue-little-balls-biggest.svg" alt="25 bolinhas azul claro na disposição 5x5">
+        <img id="background-article" src="src/assets/images/blue-element-article.svg" alt="Elemento azul em um formato abstrato, mas que lembra uma gota">-->
+        <button type="button">View all</button> 
+    </section>
+
 </body>
 </html>
