Feat: footer finalizado e responsivo

--- a/index.html
+++ b/index.html
@@ -156,5 +156,41 @@
         <button type="button">View all</button> 
     </section>
 
+    <footer>
+        <div class="footer-content">
+            <div class="logo-container">
+                <img src="/src/assets/images/logo-footer.svg" alt="Circulo branco com um T em azul dentro">
+                <h1>Trafalgar</h1>
+            </div>
+            <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone</p>
+            <p>©Trafalgar PTY LTD 2020. All rights reserved</p>
+        </div>
+        <div class="footer-about">
+            <div class="footer-column">
+                <h3>Company</h3>
+                <p>About</p>
+                <p>Testimonials</p>
+                <p>Find a doctor</p>
+                <p>Apps</p>
+            </div>
+            <div class="footer-column">
+                <h3>Region</h3>
+                <p>Indonesia</p>
+                <p>Singapore</p>
+                <p>Hongkong</p>
+                <p>Canada</p>
+            </div>
+            <div class="footer-column">
+                <h3>Help</h3>
+                <p>Help center</p>
+                <p>Contact support</p>
+                <p>Instructions</p>
+                <p>How it works</p>
+            </div>
+        </div>
+        <img id="footer-white-balls" src="./src/assets/images/white-little-balls-biggest.svg" alt="Bolinhas brancas na disposição 4x4">
+        <img id="footer-blue-balls" src="./src/assets/images/blue-little-balls-medium.svg" alt="5x3">
+    </footer>
+
 </body>
 </html>
