Fix: removendo comentario das imagens da sexta seção (artigo)

--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
                 </div>
             </div>
         </div>
-        <!-- <img id="balls-article" src="./src/assets/images/blue-little-balls-biggest.svg" alt="25 bolinhas azul claro na disposição 5x5">
-        <img id="background-article" src="src/assets/images/blue-element-article.svg" alt="Elemento azul em um formato abstrato, mas que lembra uma gota">-->
+        <img id="balls-article" src="./src/assets/images/blue-little-balls-biggest.svg" alt="25 bolinhas azul claro na disposição 5x5">
+        <img id="background-article" src="src/assets/images/blue-element-article.svg" alt="Elemento azul em um formato abstrato, mas que lembra uma gota">
         <button type="button">View all</button> 
     </section>
 
